late input width modification

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="backTint" id="popupContainer">
             <div class="card actionsPopUp" id="popup">
                 <h3>Add item to list</h3>
-                <input class="standardInput" id="popupInput" />
+                <input class="standardInput" id="popupInput" type="text" />
                 <div>
                     <button class="standardButton" id="cancelBtn" >
                         CANCEL
